<resources>
    <string name="app_name">DatingApp</string>
    <string name="hello_world">Hello World!</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_username">Enter Your Username</string>
    <string name="enter_age">Enter Your Age</string>
    <string name="name_date_text">Brown, Lenny 4/21/20</string>
    <string name="submit_text">Submit</string>
    <string name="not_old_enough">You are not old enough!</string>
    <string name="describe_yourself">Describe yourself!</string>
    <string name="enter_occupation">Enter your occupation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_dob_text">Select Date of Birth</string>
    <string name="confirm_dob_text">Confirm</string>
    <string name="dob_not_selected">You did not select a date of birth!</string>
    <string name="signup_thanks">Thanks for Signing Up</string>
    <string name="date_of_birth">Date of Birth: </string>

    <!-- SIGNUP PROBLEMS   -->
    <string name="no_name_entered">You didn\'t enter a name!</string>
    <string name="no_email_entered">You didn\'t enter an email!</string>
    <string name="no_occupation_entered">You didn\'t enter an occupation!</string>
    <string name="no_age_entered">You didn\'t enter an age!</string>
    <string name="no_description_entered">You didn\'t enter a description</string>
    <string name="email_not_valid">You did not enter a valid email!</string>

    <!-- PROFILE INFORMATION   -->
    <string name="fae_picture_description">A picture of Fae the cat</string>
    <string name="enter_profile_info">Enter Profile Info</string>
    <string name="name">Name</string>
    <string name="ipsum_lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae lectus iaculis, tincidunt orci ac, imperdiet sapien. Aenean tincidunt mauris.</string>
    <string name="match_profile_picture">Match Profile Picture</string>

    <!-- LOCAION INFORMATION -->
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>

    <!-- MATCH INFORMATION   -->
    <string name="you_liked">You liked %1$s</string>
    <string name="you_unliked">You unliked %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="make_account_public">Make account public</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="gender">gender</string>
    <string name="max_distance">Maximum Distance</string>
    <string name="maximum_age">Maximum Age</string>
    <string name="minimum_age">Minimum Age</string>
    <string name="choose_age_range">Choose Age Range</string>
    <string name="save_changes">Save Changes</string>
</resources>
